--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+
+      <!-- AOS -->
+      <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
@@ -48,7 +51,7 @@
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
       <img src="img/Web_Photo_Editor.jpg" alt="Alif Roihan" width="200"
-      class="rounded-circle img-thumbnail" />
+      class="rounded-circle img-thumbnail">
       <h1 class="display-4">Hello, world!</h1>
       <p class="lead">Progammer | Content Creator</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,128L48,138.7C96,149,192,171,288,170.7C384,171,480,149,576,128C672,107,768,85,864,106.7C960,128,1056,192,1152,197.3C1248,203,1344,149,1392,122.7L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
@@ -59,15 +62,15 @@
       <div class="container">
         <div class="row text-center mb-5">
           <div class="col text-center">
-            <h2>About Me</h2>
+            <h2 data-aos="fade-down" data-aos-duration="1000">About Me</h2>
           </div>
         </div>
 
       <div class="row justify-content-center fs-5 text-center">
-        <div class="col-md-4">
+        <div class="col-md-4" data-aos="fade-right" data-aos-duration="1000">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates illo accusantium aliquam nulla voluptatibus voluptas qui esse debitis. Mollitia, veniam?</p>
         </div>
-            <div class="col-md-4">
+            <div class="col-md-4" data-aos="fade-left" data-aos-duration="1000">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel inventore nisi voluptate impedit possimus quis nulla, ullam dolore itaque ad fugit id aut, omnis eum?</p>
             </div>
         </div>
@@ -83,7 +86,7 @@
           <h2>My Projects</h2>
         </div>
         <div class="row justify-content-center">
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mb-3" data-aos="fade-down" data-aos-duration="1000">
             <div class="card">
               <img src="Projects/1.jpg" class="card-img-top" alt="Project 1">
                 <div class="card-body">
@@ -91,7 +94,7 @@
                 </div>
             </div>
         </div>
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mb-3" data-aos="fade-down" data-aos-duration="2000">
             <div class="card">
               <img src="Projects/2.jpg" class="card-img-top" alt="Project 2">
                 <div class="card-body">
@@ -99,7 +102,7 @@
                 </div>
             </div>
         </div>
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mb-3" data-aos="fade-down" data-aos-duration="3000">
             <div class="card">
               <img src="Projects/3.jpg" class="card-img-top" alt="Project 3">
                 <div class="card-body">
@@ -107,7 +110,7 @@
                 </div>
             </div>
         </div>
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mb-3" data-aos="fade-down" data-aos-duration="2000">
             <div class="card">
               <img src="Projects/4.jpg" class="card-img-top" alt="Project 4">
                 <div class="card-body">
@@ -115,7 +118,7 @@
                 </div>
             </div>
         </div>
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mb-3" data-aos="fade-down" data-aos-duration="3000">
             <div class="card">
               <img src="Projects/5.jpg" class="card-img-top" alt="Project 5">
                 <div class="card-body">
@@ -131,7 +134,7 @@
 
     <!-- Contact -->
     <section id="contact">
-      <div class="conatiner">
+      <div class="container" data-aos="flip-right" data-aos-duration="2000">
         <div class="row text-center mb-3">
           <div class="col">
             <h2>Contact Me</h2>
@@ -168,5 +171,11 @@
     <!-- Akhir Footer -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+
+      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+
   </body>
 </html>
